change on folders and files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="/images/moovie.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/3bcbb0a983.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
     <title>My movie</title>
   </head>
   <body>
@@ -44,6 +44,6 @@
       </section>
     </main>
     <footer></footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/assets/main.js"></script>
   </body>
 </html>
