final chages or directory

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <section>
         <div class="menu-content">
           <h3>Series</h3>
-          <a href="./src/assets/full-content.html?query=series" class="buttonShow">Show More</a>
+          <a href="/full-content.html?query=series" class="buttonShow">Show More</a>
         </div>
         <div id="series"></div>
       </section>
       <section>
         <div class="menu-content">
           <h3>Movies</h3>
-          <a href="./src/assets/full-content.html?query=movies" class="buttonShow">Show More</a>
+          <a href="/full-content.html?query=movies" class="buttonShow">Show More</a>
         </div>
         <div id="movies">
         </div>
@@ -38,7 +38,7 @@
       <section>
         <div class="menu-content">
           <h3>Favorites</h3>
-          <a href="./src/assets/full-content.html?query=favorites" class="buttonShow">Show More</a>
+          <a href="/full-content.html?query=favorites" class="buttonShow">Show More</a>
         </div>
         <div id="favorites"></div>
       </section>
