fix for everything

--- a/src/full-content/full-content.html
+++ b/src/full-content/full-content.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/images/moovie.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3bcbb0a983.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/assets/css/style.css">
-    <script type="module" src="/src/assets/js/details/full.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script type="module" src="/js/details/full.js"></script>
     <title>Details</title>
 </head>
 <body>
