--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="/images/moovie.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/3bcbb0a983.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./src/assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>My movie</title>
   </head>
   <body>
@@ -23,14 +23,14 @@
       <section>
         <div class="menu-content">
           <h3>Series</h3>
-          <a href="/full-content.html?query=series" class="buttonShow">Show More</a>
+          <a href="/full-content/full-content.html?query=series" class="buttonShow">Show More</a>
         </div>
         <div id="series"></div>
       </section>
       <section>
         <div class="menu-content">
           <h3>Movies</h3>
-          <a href="/full-content.html?query=movies" class="buttonShow">Show More</a>
+          <a href="/full-content/full-content.html?query=movies" class="buttonShow">Show More</a>
         </div>
         <div id="movies">
         </div>
@@ -38,12 +38,12 @@
       <section>
         <div class="menu-content">
           <h3>Favorites</h3>
-          <a href="/full-content.html?query=favorites" class="buttonShow">Show More</a>
+          <a href="/full-content/full-content.html?query=favorites" class="buttonShow">Show More</a>
         </div>
         <div id="favorites"></div>
       </section>
     </main>
     <footer></footer>
-    <script type="module" src="/src/assets/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
