new code for mobile screens

--- a/src/full-content/full-content.html
+++ b/src/full-content/full-content.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="/images/moovie.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3bcbb0a983.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/mobile.css">
     <script type="module" src="/js/details/full.js"></script>
     <title>Details</title>
 </head>
