add a footer desing to the page

--- a/src/full-content/full-content.html
+++ b/src/full-content/full-content.html
@@ -24,5 +24,14 @@
     <main>
         <div id="results"></div>
     </main>
+    <footer class="footer">
+      <div>
+        <h3>Designed by: Jose Angel Arteaga - WDD330</h3>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/josart121796/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/josArt17" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
 </body>
 </html>
