--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,15 @@
         <div id="favorites"></div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div>
+        <h3>Designed by: Jose Angel Arteaga - WDD330</h3>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/josart121796/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/josArt17" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
